--- a/Figma.html
+++ b/Figma.html
@@ -73,6 +73,7 @@
       }
       .product-image > img {
         height: 100%;
+        width: 90%;
         margin: 0 auto;
         display: block;
       }
