fix: wrong background image

--- a/Figma.html
+++ b/Figma.html
@@ -18,13 +18,19 @@
       html {
         width: 100%;
         height: 100%;
+        margin: 0;
+        padding: 0;
       }
       body {
         width: 100%;
         height: 100%;
         margin: 0;
         padding: 0;
-        background-color: #c1b494e5;
+        background-color: rgba(193, 180, 148, 0.898);
+        backdrop-filter: blur(15px);
+        background-image: url("popup_bg.png");
+        background-position: center;
+        background-repeat: no-repeat;
         font-family: "Roboto";
       }
       .header {
